# Hres

./: LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cangwang/hres/: ImageShowActivity.kt  ImageTransformActivity.kt  MainActivity.kt  VulkanImageShowActivity.kt  VulkanImageTransformActivity.kt
app/src/main/res/layout/: activity_album.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
hreso/: CMakeLists.txt  build.gradle
hreso/src/main/: AndroidManifest.xml
hreso/src/main/cpp/: hresjni.cpp
hreso/src/main/cpp/bean/: engineoption.cpp  engineoption.h  imageoptionparams.cpp  imageoptionparams.h  ioptions.h  pointrect.h
hreso/src/main/cpp/egl/: eglcore.cpp  eglcore.h  glbase.h
hreso/src/main/cpp/filter/: bilinearfilter.cpp  bilinearfilter.h  fbfilter.cpp  fbfilter.h  filtercontroller.cpp  filtercontroller.h  filterlistener.cpp  filterlistener.h  fsrfilter.cpp  fsrfilter.h  fsrupfilter.cpp  fsrupfilter.h  hqxfilter.cpp  hqxfilter.h  ifilter.h  simplefilter.cpp  simplefilter.h
hreso/src/main/cpp/glsl/: fsr.glsl  fsrup.glsl  hermite.glsl  hqx.glsl  lagrange.glsl  largrange.glsl
hreso/src/main/cpp/transform/: HresBaseTransformer.h  ImageVulkanHresTransformer.cpp  ImageVulkanHresTransformer.h  hrestransformer.cpp  hrestransformer.h  ihrestransformer.h  imagehrestransformer.cpp  imagehrestransformer.h  imageoptionparams.cpp  imageoptionparams.h  ioptions.h  listenermanager.cpp  listenermanager.h  optionparser.cpp  optionparser.h
hreso/src/main/cpp/util/: glfloatarray.cpp  glfloatarray.h  loadtextureutil.cpp  loadtextureutil.h  shaderutil.cpp  shaderutil.h  stb_image.h  texcoordsutil.cpp  texcoordsutil.h  threadpool.h  vertexutil.cpp  vertexutil.h
hreso/src/main/cpp/vulkan/: CommonUtils.h  Log.h  VKShader.h  VKUtils.cpp  VKUtils.h  VideoRenderContext.cpp  VideoRenderContext.h  VideoRenderer.cpp  VideoRenderer.h
hreso/src/main/cpp/vulkan/engine/: VKBufferManager.cpp  VKBufferManager.h  VKDefine.h  VKDeviceManager.cpp  VKDeviceManager.h  VKEngineRenderer.cpp  VKEngineRenderer.h  VKOffScreen.cpp  VKOffScreen.h  VKRender.cpp  VKRender.h  VKSwapChainManager.cpp  VKSwapChainManager.h  VKTextureManager.cpp  VKTextureManager.h
hreso/src/main/cpp/vulkan/filter/: EffectFilter.h  FilterDefine.h  FilterType.h  FilterUtil.cpp  FilterUtil.h  FsrVulkanFilter.cpp  FsrVulkanFilter.h  OffScreenFilter.cpp  OffScreenFilter.h  OffScreenImageFilter.cpp  OffScreenImageFilter.h  VulkanFilter.cpp  VulkanFilter.h  VulkanInitializers.h
hreso/src/main/java/com/cangwang/hreso/bean/: EngineOptionParams.kt  ImageOptionParams.kt  ImgOptionParams.kt  OptionParams.kt
hreso/src/main/java/com/cangwang/hreso/impl/: HresListener.kt
hreso/src/main/java/com/cangwang/hreso/util/: HresJniUtil.kt
pickphotoview/: build.gradle
